# Compiler-Principle-Project

./: AST.cpp  AST.h  CMakeLists.txt  EBNF.md  Grammar_new.md  README.md  lex.l  lex.yy.c  lex.yy.cc  main.cpp  parser  parser.c  parser.cpp  parser.h  parser.hpp  relation.drawio  test.ll  yacc.y
Reference/: README.md
Src/: main.cpp  testfile
Src/include/: AST.h  FlexLexer.h  codeGen.h  decl.h  expr.h  function.h  parser.hpp  stmt.h  util.h
Src/src/: AST.cpp  codeGen.cpp  decl.cpp  expr.cpp  lex.l  lex.yy.cc  parser.cpp  stmt.cpp  util.cpp  yacc.ypp
test/: README.md  matirx_mul.c  matrix_mul.xs  qs.c  quick_sort.c  quick_sort.xs  test1.c  test2.c  testArray.xs  testCondition.xs  testExpr.xs  testForLoop.xs  testFunction.xs  testGlobal.xs  testIO.xs  testLoop.xs  testVariable.xs
test/testpoint/: matrix_mul.bc  quick_sort.bc
